# PlanetGen

./: CMakeLists.txt  README.md
cmake/: CopyShaders.cmake  LinkDate.cmake  LinkIMGUI.cmake
source/: main.cpp  modules.h
source/camera/: camera.cpp  camera.h
source/common/: drawable.h  inputable.h  windowable.h
source/objects/: object.cpp  object.h
source/objects/color_cube/: color_cube.cpp  color_cube.h
source/objects/icosphere/: icosphere.cpp  icosphere.h
source/shaders/: shader.cpp  shader.h  shader_program.cpp  shader_program.h
source/shaders/glsl/: debug_normal_fragment.glsl  plain_fragment.glsl  plain_vertex.glsl  sphere_tcs.glsl  sphere_tes.glsl  sphere_vertex.glsl
source/shaders/glsl/debug/: debug_mesh_fragment.glsl  debug_mesh_geometry.glsl  debug_mesh_vertex.glsl  debug_normal_fragment.glsl  debug_normal_geometry.glsl  debug_normal_vertex.glsl
source/shaders/glsl/phong/: phong_fragment.glsl  phong_geometry.glsl  phong_vertex.glsl
source/shaders/glsl/planet/: planet_color_layers_fragment.glsl
source/shaders/glsl/shadow/: shadow_fragment.glsl  shadow_tcs.glsl  shadow_tes.glsl  shadow_vertex.glsl
source/ui/: ui.cpp  ui.h
